package logistics;

public interface Transport {
    String deliver(String destination);
}
